Fixed scrollbar for different resolution

--- a/app/styles/custom/scrollbar.less
+++ b/app/styles/custom/scrollbar.less
@@ -1,12 +1,12 @@
 .position-fixed {
   padding-right: 15px;
-  height: 70vh;
+  height: 75vh;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 .less-position-fixed {
-  height: 60vh;
+  height: 65vh;
 }
 
 .position-fixed {
