--- a/app/styles/custom/search-col.less
+++ b/app/styles/custom/search-col.less
@@ -1,27 +1,3 @@
-.position-fixed {
-  padding-right: 15px;
-  height: 85vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-.position-fixed {
-  &::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    background-color: #f9f9f9;
-  }
-  &::-webkit-scrollbar {
-    width: 6px;
-    background-color: #f9f9f9;
-  }
-  &::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, .3);
-    background-color: #999;
-  }
-}
-
 .search-col {
   margin-top: -20px; // offset the min body padding
   margin-bottom: 30px;
